test/src/e2e_vm_tests/test_programs/should_fail/method_type_args_variable_non_existing/src/main.sw
script;

struct S {}

impl S {
    fn method(self, a: u64) -> u64 {
        a
    }
}

fn main() {
    let _ = S {}.method(non_existing);
}